--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
         100% { transform: scale(1.15); }
       }
       .animate-ken-burns {
-        animation: ken-burns 20s ease-out infinite alternate;
+        animation: ken-burns 25s ease-out infinite alternate;
       }
 
       @keyframes fade-in-up {
-        from { opacity: 0; transform: translateY(30px); }
+        from { opacity: 0; transform: translateY(40px); }
         to { opacity: 1; transform: translateY(0); }
       }
       .animate-fade-in-up {
-        animation: fade-in-up 1s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+        animation: fade-in-up 1.2s cubic-bezier(0.16, 1, 0.3, 1) forwards;
       }
 
       @keyframes fade-in {
@@ -66,7 +66,7 @@
         to { opacity: 1; }
       }
       .animate-fade-in {
-        animation: fade-in 0.6s ease-out forwards;
+        animation: fade-in 0.8s ease-out forwards;
       }
 
       @keyframes fade-in-right {
@@ -74,7 +74,7 @@
         to { opacity: 1; transform: translateX(0); }
       }
       .animate-fade-in-right {
-        animation: fade-in-right 0.3s ease-out forwards;
+        animation: fade-in-right 0.4s ease-out forwards;
       }
       
       @keyframes scale-in {
@@ -82,14 +82,19 @@
         to { opacity: 1; transform: scale(1); }
       }
       .animate-scale-in {
-        animation: scale-in 0.3s ease-out forwards;
+        animation: scale-in 0.4s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+      }
+      
+      /* Smooth ease for hover scaling */
+      .ease-bezier {
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
       }
 
       /* Shimmer loading effect */
       .shimmer {
         background: linear-gradient(to right, #1a1a1a 0%, #2a2a2a 50%, #1a1a1a 100%);
         background-size: 200% 100%;
-        animation: shimmer 1.5s infinite linear;
+        animation: shimmer 2s infinite linear;
       }
       @keyframes shimmer {
         0% { background-position: -200% 0; }
