feat: Enhance metadata and AI movie generation
Adds comprehensive meta tags to index.html for improved SEO and social sharing, including favicons and Open Graph properties.

Updates geminiService.ts to simplify API key retrieval and improve the robustness of movie data parsing from the AI. Placeholder image URLs and default values are now consistently applied for missing movie properties.

Refactors App.tsx to correctly append newly fetched AI-generated movies to the existing trending category, ensuring data is added without overwriting.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CineStream AI</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>CineStream AI - Premium Movie Streaming</title>
+    <meta name="title" content="CineStream AI - Premium Movie Streaming">
+    <meta name="description" content="Stream the latest trending movies, sci-fi thrillers, and exclusive user uploads on CineStream AI. Experience cinema with intelligent recommendations.">
+
+    <!-- Favicon (Red Play Button Logo) -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='50' fill='%23dc2626'/%3E%3Cpath d='M38 30 L72 50 L38 70 Z' fill='white'/%3E%3C/svg%3E">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://cinestream.ai/">
+    <meta property="og:title" content="CineStream AI - Premium Movie Streaming">
+    <meta property="og:description" content="Stream the latest trending movies, sci-fi thrillers, and exclusive user uploads on CineStream AI.">
+    <meta property="og:image" content="https://picsum.photos/seed/eclipse_wide/1200/630">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="CineStream AI">
+    <meta property="twitter:description" content="Stream the latest trending movies and exclusive content.">
+    <meta property="twitter:image" content="https://picsum.photos/seed/eclipse_wide/1200/630">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
     <style>
