--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
         animation: scale-in 0.4s cubic-bezier(0.16, 1, 0.3, 1) forwards;
       }
       
+      @keyframes shake {
+        0%, 100% { transform: translateX(0); }
+        10%, 30%, 50%, 70%, 90% { transform: translateX(-5px); }
+        20%, 40%, 60%, 80% { transform: translateX(5px); }
+      }
+      .shake {
+        animation: shake 0.5s cubic-bezier(.36,.07,.19,.97) both;
+      }
+
       /* Smooth ease for hover scaling */
       .ease-bezier {
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
